clusters/apps/env/production/home/grocy/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: ${APP}.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${APP}.${FAMILY_DOMAIN}`)"
      services:
        - name: ${APP}-frontend
          port: 8080
          nativeLB: true
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${APP}.${FAMILY_DOMAIN}
